# NNUE

./: .gitignore  CMakeLists.txt  README.md  ferma.md  main.cpp  plan.md  promt.md  tree.txt
.hypothesis/constants/: 27155ca48421d8c5  42db8ebe776928ba  6a91c045490869cf  7a62d341bb95c06d  9f36a9b25fb09f02  c3e7355bf9953320  cbe7c43358cf0c20  da39a3ee5e6b4b0d  dc38c9d74358f156  e1daf73a27b78a73  ee56421c6485ca85
.hypothesis/examples/04e6b3400353b141/: 3db93a68d02d11f0  8d968d65f20eea95
data/: train.json
data/raw/: testData.csv
docs/: 0. Task.md  1. Conspect.md  2. Architecture.md  3. Gradients.md  4. Function by-element view.md  5. First try (linear).md  6. Updating.md  Promt.md  description.txt  fen_tests.md
include/: core.hpp
include/nnue/: nnue.hpp
logs/: events.out.tfevents.1756995006.sufferer.2482253.0  events.out.tfevents.1756999438.sufferer.2590077.0  events.out.tfevents.1756999629.sufferer.2594753.0  events.out.tfevents.1757000006.sufferer.2600537.0
src/: core.cpp
src/python/: configs.py  dataset.py  main.py  model.py  train.py
src/python/scripts/: check_npz.py  train_val.py
tests/: script.py  test_calculate_input.cpp  test_cross_index.py  test_dataset_class.py  test_fen_to_indices.py  test_load_raw_file.py  test_make_note.py  test_model.py  test_save_npz.py  test_write_to_batch.py
tests/python/: fen_parsing_tests.py
train/include/nnue/: train.hpp
